implement collector creating and listing
